--- a/src/vista/FrameAlimentacion.form
+++ b/src/vista/FrameAlimentacion.form
@@ -42,6 +42,7 @@
             <Component class="javax.swing.JRadioButton" name="rbtdesayuno">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Desayuno"/>
+                <Property name="name" type="java.lang.String" value="desayuno" noResource="true"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbtdesayunoActionPerformed"/>
@@ -55,6 +56,7 @@
             <Component class="javax.swing.JRadioButton" name="rbtmerienda">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Merienda"/>
+                <Property name="name" type="java.lang.String" value="merienda" noResource="true"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbtmeriendaActionPerformed"/>
@@ -68,6 +70,7 @@
             <Component class="javax.swing.JRadioButton" name="rbtalmuerzo">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Almuerzo"/>
+                <Property name="name" type="java.lang.String" value="almerzo" noResource="true"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbtalmuerzoActionPerformed"/>
@@ -81,6 +84,7 @@
             <Component class="javax.swing.JRadioButton" name="rbtcompleto">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Completo"/>
+                <Property name="name" type="java.lang.String" value="completo" noResource="true"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbtcompletoActionPerformed"/>
@@ -94,6 +98,7 @@
             <Component class="javax.swing.JRadioButton" name="rbtninguno">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ninguno"/>
+                <Property name="name" type="java.lang.String" value="ninguno" noResource="true"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbtningunoActionPerformed"/>
@@ -110,9 +115,10 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jLabel1">
+            <Component class="javax.swing.JLabel" name="precioAlmuerzo">
               <Properties>
                 <Property name="text" type="java.lang.String" value="+ $ 8,00"/>
+                <Property name="name" type="java.lang.String" value="8.00" noResource="true"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -120,9 +126,10 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel4">
+            <Component class="javax.swing.JLabel" name="precioDesayuno">
               <Properties>
                 <Property name="text" type="java.lang.String" value="+ $ 5,00"/>
+                <Property name="name" type="java.lang.String" value="5.00" noResource="true"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -130,9 +137,10 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel7">
+            <Component class="javax.swing.JLabel" name="precioMerienda">
               <Properties>
                 <Property name="text" type="java.lang.String" value="+ $ 8,00"/>
+                <Property name="name" type="java.lang.String" value="8.00" noResource="true"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -140,9 +148,10 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel8">
+            <Component class="javax.swing.JLabel" name="precioCompleto">
               <Properties>
                 <Property name="text" type="java.lang.String" value="+ $ 17,00"/>
+                <Property name="name" type="java.lang.String" value="17.00" noResource="true"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -150,9 +159,10 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel9">
+            <Component class="javax.swing.JLabel" name="precioNinguno">
               <Properties>
                 <Property name="text" type="java.lang.String" value="+ $ 0,00"/>
+                <Property name="name" type="java.lang.String" value="0.00" noResource="true"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -168,10 +178,13 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="aceptar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Aceptar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aceptarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
